--- a/app/src/main/res/layout/activity_change_org.xml
+++ b/app/src/main/res/layout/activity_change_org.xml
@@ -6,39 +6,27 @@
     android:layout_height="match_parent"
     tools:context="com.myapp.easywaiver.ChangeOrgActivity">
 
-    <Button
-        android:id="@+id/org_button"
-        android:layout_width="162dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="64dp"
-        android:layout_weight="1"
-        android:enabled="true"
-        android:text="@string/org"
-        android:textColor="#000000"
+    <TextView
+        android:id="@+id/set_org"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:text="@string/set_org"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/org_tv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/org_tv" />
-
-    <EditText
-        android:id="@+id/org_tv"
-        android:layout_width="298dp"
-        android:layout_height="79dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="64dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/org_toolbar" />
 
     <android.widget.Toolbar
         android:id="@+id/org_toolbar"
-        android:layout_width="fill_parent"
-        android:layout_height="59dp"
-        android:background="#03A9F4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/blue_grey"
         android:contentInsetStart="0dp"
         android:contentInsetLeft="0dp"
         android:contentInsetEnd="0dp"
@@ -46,7 +34,44 @@
         android:elevation="4dp"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintBottom_toTopOf="@id/set_org"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread_inside" />
+
+    <EditText
+        android:id="@+id/org_tv"
+        android:layout_width="298dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:paddingVertical="24dp"
+        android:text="Name"
+        app:layout_constraintBottom_toTopOf="@id/org_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/set_org" />
+
+    <Button
+        android:id="@+id/org_button"
+        android:layout_width="162dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:enabled="true"
+        android:paddingVertical="16dp"
+        android:text="@string/org"
+        app:layout_constraintBottom_toTopOf="@id/guideline5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/org_tv" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.65" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
