Some button sizing, starting to add transparency for disabled buttons, changed edit texts to hints (except org)

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,8 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:paddingTop="24dp"
-        android:paddingBottom="24dp"
+        android:paddingVertical="24dp"
         android:text="@string/new_button"
         app:layout_constraintBottom_toTopOf="@+id/share"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -53,8 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:paddingTop="24dp"
-        android:paddingBottom="24dp"
+        android:paddingVertical="24dp"
         android:text="@string/share"
         app:layout_constraintBottom_toTopOf="@+id/org"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -66,8 +64,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:paddingTop="24dp"
-        android:paddingBottom="24dp"
+        android:paddingVertical="24dp"
         android:text="@string/view_forms"
         app:layout_constraintBottom_toTopOf="@+id/about"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -79,8 +76,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:paddingTop="24dp"
-        android:paddingBottom="24dp"
+        android:paddingVertical="24dp"
         android:text="@string/about"
         app:layout_constraintBottom_toBottomOf="@id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
