--- a/app/src/main/res/layout/activity_release_form.xml
+++ b/app/src/main/res/layout/activity_release_form.xml
@@ -69,6 +69,7 @@
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="16dp"
         android:enabled="true"
+        android:paddingVertical="24dp"
         android:text="@string/agree"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
