--- a/app/src/main/res/layout/activity_change_org.xml
+++ b/app/src/main/res/layout/activity_change_org.xml
@@ -48,7 +48,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingVertical="24dp"
-        android:text="Name"
+        android:hint="Name"
         app:layout_constraintBottom_toTopOf="@id/org_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:enabled="true"
-        android:paddingVertical="16dp"
+        android:paddingVertical="24dp"
         android:text="@string/org"
         app:layout_constraintBottom_toTopOf="@id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
