--- a/app/src/main/res/layout/activity_change_org.xml
+++ b/app/src/main/res/layout/activity_change_org.xml
@@ -46,9 +46,9 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:ems="10"
+        android:hint="Organization Name"
         android:inputType="textPersonName"
         android:paddingVertical="24dp"
-        android:hint="Name"
         app:layout_constraintBottom_toTopOf="@id/org_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,14 +58,32 @@
         android:id="@+id/org_button"
         android:layout_width="162dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
         android:layout_weight="1"
-        android:enabled="true"
+        android:alpha="0.3"
+        android:enabled="false"
         android:paddingVertical="24dp"
         android:text="@string/org"
         app:layout_constraintBottom_toTopOf="@id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/back_button"
         app:layout_constraintTop_toBottomOf="@id/org_tv" />
+
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="162dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
+        android:layout_weight="1"
+        android:enabled="true"
+        android:paddingVertical="24dp"
+        android:text="Back"
+        app:layout_constraintBottom_toTopOf="@id/guideline5"
+        app:layout_constraintEnd_toStartOf="@id/org_button"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/org_tv"
+        app:layout_constraintVertical_bias="1.0" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
