--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,6 +53,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:paddingVertical="24dp"
+        android:enabled="false"
+        android:alpha="0.3"
         android:text="@string/share"
         app:layout_constraintBottom_toTopOf="@+id/org"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
