--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -17,11 +17,9 @@
         signature:contentInsetLeft="0dp"
         signature:contentInsetRight="0dp"
         signature:contentInsetStart="0dp"
-        signature:layout_constraintBottom_toTopOf="@id/input"
         signature:layout_constraintEnd_toEndOf="parent"
         signature:layout_constraintStart_toStartOf="parent"
         signature:layout_constraintTop_toTopOf="parent"
-        signature:layout_constraintVertical_chainStyle="spread_inside"
         signature:popupTheme="@style/ThemeOverlay.AppCompat" />
 
     <TextView
@@ -35,41 +33,50 @@
         android:text="@string/input"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
-        signature:layout_constraintBottom_toTopOf="@+id/name_text"
+        signature:layout_constraintBottom_toTopOf="@+id/inputs_container"
         signature:layout_constraintEnd_toEndOf="parent"
         signature:layout_constraintStart_toStartOf="parent"
-        signature:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
+        signature:layout_constraintTop_toBottomOf="@id/my_toolbar" />
 
-    <EditText
-        android:id="@+id/name_text"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/inputs_container"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Name"
-        signature:layout_constraintBottom_toTopOf="@+id/email_text"
-        signature:layout_constraintLeft_toLeftOf="parent"
-        signature:layout_constraintRight_toRightOf="parent"
-        signature:layout_constraintTop_toBottomOf="@id/input" />
+        signature:layout_constraintBottom_toTopOf="@+id/signature_pad_container"
+        signature:layout_constraintEnd_toEndOf="parent"
+        signature:layout_constraintStart_toStartOf="parent"
+        signature:layout_constraintTop_toBottomOf="@+id/input">
 
-    <EditText
-        android:id="@+id/email_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/signature_pad_container"
-        android:layout_below="@+id/name_text"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:hint="Email"
-        signature:layout_constraintBottom_toTopOf="@+id/guideline6"
-        signature:layout_constraintLeft_toLeftOf="parent"
-        signature:layout_constraintRight_toRightOf="parent"
-        signature:layout_constraintTop_toBottomOf="@+id/name_text" />
+        <EditText
+            android:id="@+id/name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="16dp"
+            android:ems="10"
+            android:hint="Name"
+            android:inputType="textPersonName"
+            signature:layout_constraintBottom_toBottomOf="parent"
+            signature:layout_constraintEnd_toStartOf="@+id/email_text"
+            signature:layout_constraintHorizontal_chainStyle="packed"
+            signature:layout_constraintStart_toStartOf="parent"
+            signature:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/email_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="16dp"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            signature:layout_constraintBottom_toBottomOf="parent"
+            signature:layout_constraintEnd_toEndOf="parent"
+            signature:layout_constraintStart_toEndOf="@+id/name_text"
+            signature:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
@@ -82,10 +89,10 @@
         android:id="@+id/signature_pad_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        signature:layout_constraintBottom_toTopOf="@id/buttons_container"
         signature:layout_constraintLeft_toLeftOf="parent"
         signature:layout_constraintRight_toRightOf="parent"
-        signature:layout_constraintTop_toBottomOf="@+id/guideline6"
-        signature:layout_constraintBottom_toTopOf="@id/buttons_container">
+        signature:layout_constraintTop_toBottomOf="@+id/guideline6">
 
         <TextView
             android:id="@+id/signature"
@@ -112,8 +119,6 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
             android:background="#656565"
             signature:layout_constraintBottom_toBottomOf="parent"
             signature:layout_constraintLeft_toLeftOf="parent"
@@ -136,8 +141,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:enabled="false"
             android:alpha="0.3"
+            android:enabled="false"
             android:paddingVertical="24dp"
             android:text="@string/clear_pad"
             android:textColor="#FFFFFF" />
@@ -147,8 +152,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:enabled="false"
             android:alpha="0.3"
+            android:enabled="false"
             android:paddingVertical="24dp"
             android:text="@string/save_signature"
             android:textColor="#FFFFFF" />
