--- a/app/src/main/res/layout/activity_change_org.xml
+++ b/app/src/main/res/layout/activity_change_org.xml
@@ -34,6 +34,7 @@
         android:elevation="4dp"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:titleTextColor="@color/white"
         app:layout_constraintBottom_toTopOf="@id/set_org"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
