--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,14 +15,14 @@
         android:popupTheme="@style/ThemeOverlay.AppCompat"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         android:titleTextColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/welcome"
+        app:layout_constraintBottom_toTopOf="@id/banner_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="spread_inside" />
 
     <TextView
-        android:id="@+id/welcome"
+        android:id="@+id/banner_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -46,7 +46,7 @@
         app:layout_constraintBottom_toTopOf="@+id/share"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@id/welcome" />
+        app:layout_constraintTop_toBottomOf="@id/banner_tv" />
 
     <Button
         android:id="@+id/share"
