Added flag or default background, internal storage uses SharedPreferences now

--- a/app/src/main/res/layout-land/activity_change_org.xml
+++ b/app/src/main/res/layout-land/activity_change_org.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/org_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.myapp.easywaiver.ChangeOrgActivity">
@@ -48,10 +49,10 @@
         android:hint="Organization Name"
         android:inputType="textPersonName"
         android:paddingVertical="24dp"
+        app:layout_constraintBottom_toTopOf="@id/org_buttons_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/set_org"
-        app:layout_constraintBottom_toTopOf="@id/org_buttons_container"/>
+        app:layout_constraintTop_toBottomOf="@id/set_org" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/org_buttons_container"
