--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/home_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.myapp.easywaiver.HomeActivity">
@@ -53,9 +54,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:paddingVertical="24dp"
-        android:enabled="false"
         android:alpha="0.3"
+        android:enabled="false"
+        android:paddingVertical="24dp"
         android:text="@string/share"
         app:layout_constraintBottom_toTopOf="@+id/org"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
