--- a/app/src/main/res/layout-land/activity_set_banner.xml
+++ b/app/src/main/res/layout-land/activity_set_banner.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/banner_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.myapp.easywaiver.SetBannerActivity">
@@ -48,10 +49,10 @@
         android:hint="Welcome message"
         android:inputType="text"
         android:paddingVertical="24dp"
+        app:layout_constraintBottom_toTopOf="@id/banner_buttons_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/set_banner"
-        app:layout_constraintBottom_toTopOf="@id/banner_buttons_container"/>
+        app:layout_constraintTop_toBottomOf="@id/set_banner" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/banner_buttons_container"
