Added landscape for home, signer edit text's shouldn't offer suggestions now, may vary by phone but out of my hands

--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Name"
-        android:inputType="textPersonName"
+        android:inputType="textVisiblePassword"
         android:textSize="24sp"
         signature:layout_constraintBottom_toTopOf="@+id/email_text"
         signature:layout_constraintLeft_toLeftOf="parent"
@@ -68,7 +68,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Email"
-        android:inputType="textEmailAddress"
+        android:inputType="textVisiblePassword"
         android:textSize="24sp"
         signature:layout_constraintBottom_toTopOf="@+id/guideline6"
         signature:layout_constraintLeft_toLeftOf="parent"
