--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -58,7 +58,7 @@
             android:layout_marginHorizontal="16dp"
             android:ems="10"
             android:hint="Name"
-            android:inputType="textPersonName"
+            android:inputType="textVisiblePassword"
             signature:layout_constraintBottom_toBottomOf="parent"
             signature:layout_constraintEnd_toStartOf="@+id/email_text"
             signature:layout_constraintHorizontal_chainStyle="packed"
@@ -73,7 +73,7 @@
             android:layout_marginHorizontal="16dp"
             android:ems="10"
             android:hint="Email"
-            android:inputType="textEmailAddress"
+            android:inputType="textVisiblePassword"
             signature:layout_constraintBottom_toBottomOf="parent"
             signature:layout_constraintEnd_toEndOf="parent"
             signature:layout_constraintStart_toEndOf="@+id/name_text"
