--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,22 @@
     android:clipToPadding="false"
     tools:context="com.myapp.easywaiver.MainActivity">
 
+    <EditText
+        android:id="@+id/phone_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:ems="10"
+        android:hint="Phone"
+        android:inputType="textNoSuggestions|phone"
+        signature:layout_constraintBottom_toTopOf="@+id/email_text"
+        signature:layout_constraintLeft_toLeftOf="parent"
+        signature:layout_constraintRight_toRightOf="parent"
+        signature:layout_constraintTop_toBottomOf="@id/name_text"
+        signature:layout_constraintVertical_bias="0.926" />
+
     <android.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="0dp"
@@ -31,7 +47,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:text="@string/input"
@@ -47,11 +62,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textNoSuggestions|textCapWords"
-        signature:layout_constraintBottom_toTopOf="@+id/email_text"
+        signature:layout_constraintBottom_toTopOf="@id/phone_text"
         signature:layout_constraintLeft_toLeftOf="parent"
         signature:layout_constraintRight_toRightOf="parent"
         signature:layout_constraintTop_toBottomOf="@id/input" />
@@ -71,14 +87,14 @@
         signature:layout_constraintBottom_toTopOf="@+id/guideline6"
         signature:layout_constraintLeft_toLeftOf="parent"
         signature:layout_constraintRight_toRightOf="parent"
-        signature:layout_constraintTop_toBottomOf="@+id/name_text" />
+        signature:layout_constraintTop_toBottomOf="@id/phone_text" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        signature:layout_constraintGuide_percent="0.45" />
+        signature:layout_constraintGuide_percent="0.5" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/signature_pad_container"
